backend/check_out.txt
    Checking backend v0.1.0 (/workspace/backend)
warning: unused import: `RankingQuizAnswer`
 --> src/repositories/ranking_quiz_repository.rs:4:48
  |
4 | ...iz::{RankingQuiz, RankingQuizAnswer};
  |                      ^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error: future cannot be sent between threads safely
  --> src/handlers/ranking_quiz_handler.rs:18:1
   |
18 | #[axum::debug_handler]
   | ^^^^^^^^^^^^^^^^^^^^^^ future returned by `start_ranking_quiz` is not `Send`
   |
   = help: within `impl Future<Output = ...>`, the trait `std::marker::Send` is not implemented for `Rc<UnsafeCell<...>>`
note: future is not `Send` as this value is used across an await
  --> src/services/ranking_quiz_service.rs:56:10
   |
41 |         let mut rng = rand::thread_rng();
   |             ------- has type `ThreadRng` which is not `Send`
...
56 |         .await
   |          ^^^^^ await occurs here, with `mut rng` maybe used later
note: required by a bound in `__axum_macros_check_start_ranking_quiz_future::check`
  --> src/handlers/ranking_quiz_handler.rs:18:1
   |
18 | #[axum::debug_handler]
   | ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `check`
   = note: the full name for the type has been written to '/workspace/backend/target/debug/deps/backend-8f763c0bf280e13b.long-type-9634390809882516576.txt'
   = note: consider using `--verbose` to print the full type name to the console
   = note: this error originates in the attribute macro `axum::debug_handler` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `fn(..., ..., ...) -> ... {start_ranking_quiz}: Handler<_, _>` is not satisfied
    --> src/lib.rs:150:18
     |
 150 | ...   post(handlers::ranking_quiz_handler::start_ranking_quiz),
     |       ---- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |       |
     |       required by a bound introduced by this call
     |
     = help: the trait `Handler<_, _>` is not implemented for fn item `fn(..., ..., ...) -> ... {start_ranking_quiz}`
     = note: Consider using `#[axum::debug_handler]` to improve the error message
help: the following other types implement trait `Handler<T, S>`
    --> /usr/local/cargo/registry/src/index.crates.io-1949cf8c6b5b557f/axum-0.8.8/src/routing/method_routing.rs:1309:1
     |
1309 | / impl<S> Handler<(), S> for MethodRouter<S>
1310 | | where
1311 | |     S: Clone + 'static,
     | |_______________________^ `MethodRouter<S>` implements `Handler<(), S>`
     |
    ::: /usr/local/cargo/registry/src/index.crates.io-1949cf8c6b5b557f/axum-0.8.8/src/handler/mod.rs:313:1
     |
 313 | / impl<H, S, T, L> Handler<T, S> for Layered<L, H, T, S>
 314 | | where
 315 | |     L: Layer<HandlerService<H, T, S>> + Clone + Sen...
 316 | |     H: Handler<T, S>,
...    |
 320 | |     T: 'static,
 321 | |     S: 'static,
     | |_______________^ `Layered<L, H, T, S>` implements `Handler<T, S>`
note: required by a bound in `post`
    --> /usr/local/cargo/registry/src/index.crates.io-1949cf8c6b5b557f/axum-0.8.8/src/routing/method_routing.rs:445:1
     |
 445 | top_level_handler_fn!(post, POST);
     | ^^^^^^^^^^^^^^^^^^^^^^----^^^^^^^
     | |                     |
     | |                     required by a bound in this function
     | required by this bound in `post`
     = note: the full name for the type has been written to '/workspace/backend/target/debug/deps/backend-8f763c0bf280e13b.long-type-5088479189076012862.txt'
     = note: consider using `--verbose` to print the full type name to the console
     = note: this error originates in the macro `top_level_handler_fn` (in Nightly builds, run with -Z macro-backtrace for more info)

For more information about this error, try `rustc --explain E0277`.
warning: `backend` (lib) generated 1 warning
error: could not compile `backend` (lib) due to 2 previous errors; 1 warning emitted
